feat: 쿠폰 repository 생성